static/css/style.css
@font-face {font-family: "Krungthep"; src: url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot"); src: url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff") format("woff"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.svg#Krungthep") format("svg"); }

body {
    background-color: #00BEBB;
    font-family: "Krungthep";
    color: #eee;
}

p {
	line-height: 2rem;
}

#logo-container {
	display: flex;
	justify-content: center;
	flex-direction: row;
	padding-top: 5px;
	padding-bottom: 5px;
	height: 100%;
	width: 100%;
}

#goat {
	height: 100%;
}

.button-collapse {
	color: #26a69a;
}


.parallax-container {
	min-height: 380px;
	line-height: 0;
	height: auto;
	color: rgba(255,255,255,.9);
}
.parallax-container .section {
	width: 100%;
}

@media only screen and (max-width : 992px) {
	.parallax-container .section {
		top: 40%;
	}
	#index-banner .section {
		top: 10%;
	}
}

@media only screen and (max-width : 600px) {
	.parallax-container .section {
		height: auto;
		overflow: auto;
	}
	.container {
		height: auto;
	}
	#index-banner .section {
		top: 0;
	}
}

#tagline {
	font-weight: 600;
}

#event-info {
	font-weight: 400;
}

#registration-banner {
	min-height: 100px;
	max-height: 150px;
}

#registration-banner .section{
	top: auto;
}

.icon-block {
	padding: 0 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}

.parallax img {
	display: inherit;
	max-width: 200%;
}

#mlh-trust-badge {
	display: block;
	max-width: 100px;
	min-width: 60px;
	position: fixed;
	right: 50px;
	top: 0;
	width: 10%;
	z-index: 10000;
}

